# REFINER

./: .gitignore  README.md  analyze_results_testgen_all.py  analyze_results_testgen_multi.py  analyze_task_vt_effect.py  check_git_diff.py  classify_comment_task.py  commands.sh  compare_comment_coverage.py  compare_split_validity.py  compare_validation_test_vs_pure_qwen_replay.py  extract_failed_valid_tests.py  instance_docker_image_map.csv  patch_similarity.py  pyproject.toml  report_eval_on_split.py  run_agent_resolution.py  run_agent_resolution_validation_test.py  run_agent_resolution_vt_sk.py  run_agent_resolution_with_task.py  run_agent_testgen.py  run_batch_agent_resolution.py  run_batch_agent_resolution_validation_test.py  run_batch_agent_resolution_vt_sk.py  run_batch_agent_resolution_with_task.py  run_batch_agent_testgen.py  run_batch_gt_validation.py  run_batch_gt_validation_splitted.py  run_batch_patch_verification.py  run_batch_patch_verification_multi.py  run_batch_testgen.py  run_batch_tool_eval.py  run_testgen.py  run_tool_eval.py  split_acceptance_tests.py  traj_to_md.py
dataset/: comment_task_gt.jsonl  instance_images.csv
execution/: __init__.py  container_runtime.py
pipeline/: __init__.py  agent_resolver.py  agent_resolver_validation_test.py  agent_resolver_vt_sk.py  agent_resolver_with_task.py  dataset_utils.py  diff_analyzer.py  llm_client.py  repo_manager.py  test_generator.py  test_runner.py
tables/: table_all_results.txt
task_classification/: comment_task_claude.jsonl  comment_task_qwen.jsonl  comment_task_qwen36flash.jsonl  (+4 more)
(+1304 files in other folders)
