[project]
name = "my-agent"
version = "0.1.0"
description = "Standalone review resolver and tool-eval runner built from the c-CRAB Qwen Code workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "litellm>=1.86.2",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = [
    "-s",
]
